# cmaketemp

./: CMakeLists.txt  README.adoc  README.md
inc/: hello.h
src/prj1/subprj1/: hello.cpp
src/prj1/subprj2/: hello.cpp
src/prj2/subprj1/: hello.cpp
